extracted/refactored i18n related code
- i18n vars and functions now moved to i18n.js
- extracted language detection code from index.js to i18n.js/i18nInit
- renamed 'getMsg' to 'i18nTranslate'

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -359,6 +359,7 @@ textarea {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
 
 <script src="index.js"></script>
+<script src="i18n.js"></script>
 <script src="FileSaver.js"></script>
 <script src="locales/en.js"></script>
 <script src="locales/zh_CN.js"></script>
