--- a/simulator/index.html
+++ b/simulator/index.html
@@ -360,6 +360,7 @@ textarea {
 
 <script src="index.js"></script>
 <script src="i18n.js"></script>
+<script src="json-io.js"></script>
 <script src="FileSaver.js"></script>
 <script src="locales/en.js"></script>
 <script src="locales/zh_CN.js"></script>
