extracted/refactored graphs related code
- graphs related vars now moved to graphs.js
- turned var 'graphs' to const 'Graph'
- extracted graph type constants to `GraphTypeEnum`enum

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -361,6 +361,7 @@ textarea {
 <script src="index.js"></script>
 <script src="i18n.js"></script>
 <script src="json-io.js"></script>
+<script src="graphs.js"></script>
 <script src="FileSaver.js"></script>
 <script src="locales/en.js"></script>
 <script src="locales/zh_CN.js"></script>
