--- a/simulator/index.html
+++ b/simulator/index.html
@@ -362,6 +362,7 @@ textarea {
 <script src="i18n.js"></script>
 <script src="json-io.js"></script>
 <script src="graphs.js"></script>
+<script src="elements.js"></script>
 <script src="FileSaver.js"></script>
 <script src="locales/en.js"></script>
 <script src="locales/zh_CN.js"></script>
