extracted core simulator related code
- index.js just now contains UI initialization code, all the rest has moved to core.js
- 'init_i18n' has been renamed to 'initGUI'

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -360,6 +360,7 @@ textarea {
 
 <script src="index.js"></script>
 <script src="i18n.js"></script>
+<script src="core.js"></script>
 <script src="json-io.js"></script>
 <script src="graphs.js"></script>
 <script src="elements.js"></script>
