cleaned up and prepared for future, step 2 ;-)
- updated LICENSE and README.md
- updated scripts import in index.html (removed FileSaver.js local version)

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -13,136 +13,136 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon128.png">
   <style>
-input[type="button"] {
-  margin: 1px;
-}
+    input[type="button"] {
+      margin: 1px;
+    }
 
-input[type="range"] {
-  height:15px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
+    input[type="range"] {
+      height:15px;
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
 
-.toolbtn {
-  -webkit-appearance: none;
-  border-radius: 0;
-  border-style:none;
-  background-color:rgb(230,230,230);
-  outline: none;
-  line-height: 110%;
-}
+    .toolbtn {
+      -webkit-appearance: none;
+      border-radius: 0;
+      border-style:none;
+      background-color:rgb(230,230,230);
+      outline: none;
+      line-height: 110%;
+    }
 
-.toolbtn:hover {
-  border-style:none;
-  background-color:rgb(200,200,200);
-  outline: none;
-  line-height: 110%;
-}
+    .toolbtn:hover {
+      border-style:none;
+      background-color:rgb(200,200,200);
+      outline: none;
+      line-height: 110%;
+    }
 
-.toolbtnwithlisthover {
-  border-style:none;
-  background-color:rgb(215,215,215);
-  outline: none;
-  line-height: 110%;
-}
+    .toolbtnwithlisthover {
+      border-style:none;
+      background-color:rgb(215,215,215);
+      outline: none;
+      line-height: 110%;
+    }
 
-.toolbtnselected {
-  -webkit-appearance: none;
-  border-radius: 0;
-  border-style:none;
-  background-color:rgb(192,192,192);
-  outline: none;
-  line-height: 110%;
-}
+    .toolbtnselected {
+      -webkit-appearance: none;
+      border-radius: 0;
+      border-style:none;
+      background-color:rgb(192,192,192);
+      outline: none;
+      line-height: 110%;
+    }
 
-.toollistbox {
-  background-color:rgb(215,215,215);
-  font-size:12pt;
-  position:absolute;
-  padding-right: 1px;
-  line-height:1;
-}
+    .toollistbox {
+      background-color:rgb(215,215,215);
+      font-size:12pt;
+      position:absolute;
+      padding-right: 1px;
+      line-height:1;
+    }
 
-.toollistbtn {
-  -webkit-appearance: none;
-  border-radius: 0;
-  border-style:none;
-  background-color:rgb(215,215,215);
-  outline: none;
-  line-height: 110%;
-  width:100%;
-  text-align:left;
-}
+    .toollistbtn {
+      -webkit-appearance: none;
+      border-radius: 0;
+      border-style:none;
+      background-color:rgb(215,215,215);
+      outline: none;
+      line-height: 110%;
+      width:100%;
+      text-align:left;
+    }
 
-.toollistbtn:hover {
-  border-style:none;
-  background-color:rgb(168,168,168);
-  outline: none;
-  line-height: 110%;
-  width:100%;
-  text-align:left;
-}
+    .toollistbtn:hover {
+      border-style:none;
+      background-color:rgb(168,168,168);
+      outline: none;
+      line-height: 110%;
+      width:100%;
+      text-align:left;
+    }
 
-.toollistbtnselected {
-  -webkit-appearance: none;
-  border-radius: 0;
-  border-style:none;
-  background-color:rgb(168,168,168);
-  outline: none;
-  line-height: 110%;
-  width:100%;
-  text-align:left;
-}
+    .toollistbtnselected {
+      -webkit-appearance: none;
+      border-radius: 0;
+      border-style:none;
+      background-color:rgb(168,168,168);
+      outline: none;
+      line-height: 110%;
+      width:100%;
+      text-align:left;
+    }
 
-.mainbox {
-  background-color:white;
-  font-size:12pt;
-  padding-top: 1px;
-  padding-left: 1px;
-  padding-bottom: 4px;
-  padding-right: 1px;
-  margin: 0px;
-}
+    .mainbox {
+      background-color:white;
+      font-size:12pt;
+      padding-top: 1px;
+      padding-left: 1px;
+      padding-bottom: 4px;
+      padding-right: 1px;
+      margin: 0px;
+    }
 
-.saveBox {
-  background-color:white;
-  font-size:12pt;
-  padding-top: 1px;
-  padding-left: 1px;
-  padding-bottom: 1px;
-  padding-right: 1px;
-  margin: 0px;
-}
+    .saveBox {
+      background-color:white;
+      font-size:12pt;
+      padding-top: 1px;
+      padding-left: 1px;
+      padding-bottom: 1px;
+      padding-right: 1px;
+      margin: 0px;
+    }
 
 
-.settingsbox {
-  background-color:rgb(90,90,90);
-  color:white;
-  opacity:0.8;
-  font-size:12pt;
-  padding: 1px;
-  margin: 0px;
-}
+    .settingsbox {
+      background-color:rgb(90,90,90);
+      color:white;
+      opacity:0.8;
+      font-size:12pt;
+      padding: 1px;
+      margin: 0px;
+    }
 
-.forcestopbox {
-  background-color:red;
-  color:white;
-  opacity:0.8;
-  font-size:12pt;
-}
+    .forcestopbox {
+      background-color:red;
+      color:white;
+      opacity:0.8;
+      font-size:12pt;
+    }
 
-.optionsbar {
-  margin-left:5px;
-  margin-top:2px;
-}
+    .optionsbar {
+      margin-left:5px;
+      margin-top:2px;
+    }
 
-input {
-  outline: none;
-}
+    input {
+      outline: none;
+    }
 
-textarea {
-  outline: none;
-}
+    textarea {
+      outline: none;
+    }
 
   </style>
   <!--Import CSSs-->
@@ -154,90 +154,90 @@ textarea {
 
 <!-- Toolbar -->
 
-  <canvas id="canvas1" style="position: absolute; top: 0; left: 0; z-index: -1">
-  </canvas>
-  <div id="toolbar" style="background-color: white"
-  data-bind="foreach: toolbarGroups">
-    <label class="btn-group">
-      <div class="input-group-text" style="border-top-right-radius: 0; border-bottom-right-radius: 0;"
-      data-bind="text: getLocaleName()"></div>
-      <!-- ko foreach: tools -->
-      <!-- ko if: type == 1/*ToolTypeEnum.RADIO*/ -->
-      <label class="btn btn-secondary"
-       data-toggle="popover" data-trigger="hover" data-html="true"
-       data-bind="css: {'active': $parent.selected() == name}, attr: {title: getTitle(), 'data-content': getContent()}">
-        <span data-bind="text: getLocaleName()"></span>
-        <input type="radio" autocomplete="off"
-        data-bind="attr: {name: $parent.title, id: id}, value: name, checked: $parent.selected">
-      </label>
-      <!-- /ko -->
-      <!-- ko if: type == 2/*ToolTypeEnum.RADIOLIST*/ -->
-      <label class="btn btn-secondary dropdown-toggle"
-      data-bind="css: {'active': $parent.selected() == name}, attr: {style: 'z-index: ' + description + ' !important'}">
-        <!-- Show child text before current text. -->
-        <!--<span data-bind="text: selected"></span>-->
-        <span data-bind="text: getLocaleName()"></span>
-        <input type="radio" autocomplete="off"
-        data-bind="attr: {name: $parent.title, id: id}, value: name, checked: $parent.selected">
-        <div class="dropdown-menu" style="padding:0; margin:0; min-width:100%;">
-          <div class="btn-group-vertical" style="padding:0; margin:0; width:100%" data-toggle="buttons">
-            <!-- ko foreach: content -->
-            <label class="btn btn-secondary" style="margin:0"
-            data-toggle="popover" data-trigger="hover" data-html="true"
-            data-bind="css: {'active': $parent.selected() == name}, attr: {title: getTitle(), 'data-content': getContent()}">
-              <span data-bind="text: getLocaleName()"></span>
-              <input type="radio" autocomplete="off"
-              data-bind="attr: {name: $parent.name, id: id}, value: name, checked: $parent.selected">
-            </label>
-            <!-- /ko -->
-          </div>
-        </div>
-      </label>
-      <!-- /ko -->
-      <!-- ko if: type == 3/*ToolTypeEnum.BUTTON*/ -->
-      <label class="btn btn-secondary"
-      data-toggle="popover" data-trigger="hover" data-html="true"
-      data-bind="attr: {title: getTitle(), 'data-content': getContent(), id: id}">
-        <span data-bind="text: getLocaleName()"></span>
-      </label>
-      <!-- /ko -->
-      <!-- ko if: type == 4/*ToolTypeEnum.CHECK*/ -->
-      <div class="btn-group">
-        <label class="btn btn-primary"
-        data-toggle="popover" data-trigger="hover" data-html="true"
-        data-bind="css: {'active': selected() == true}, attr: {title: getTitle(), 'data-content': getContent()}">
-          <input type="checkbox" autocomplete="off"
-          data-bind="checked: selected, attr: {id: id}">
-          <span data-bind="text: getLocaleName()"></span>
-        </label>
-      </div>
-      <!-- /ko -->
-      <!-- ko if: type == 5/*ToolTypeEnum.SLIDE*/ -->
-      <div class="btn btn-static"
-        data-toggle="popover" data-trigger="hover" data-html="true"
-        data-bind="attr: {title: getTitle(), 'data-content': getContent()}">
-        <span data-bind="text: getLocaleName() + ' :'"></span>
-        <!-- TODO: Add validation, http://knockoutjs.com/documentation/extenders.html -->
-        <input type="text" style="width: 80px"
-         data-bind="value: value, valueUpdate: 'input', attr: {id: id + '_txt'}">
-        <input type="range" style="vertical-align: middle"
-         data-bind="attr: {min: min, max: max, step: step, id: id}, value: value, valueUpdate: 'input'">
-      </div>
-      <!-- /ko -->
-      <!-- ko if: type == 6/*ToolTypeEnum.HELP*/ -->
-      <div class="btn-group">
-        <label class="btn btn-danger"
-        data-toggle="popover" data-trigger="hover" data-html="true"
-        data-bind="css: {'active': selected() == true}, attr: {title: getTitle(), 'data-content': getContent()}">
-          <input id="help" type="checkbox" autocomplete="off"
-          data-bind="checked: selected">
-          <span data-bind="text: getLocaleName()"></span>
-        </label>
-      </div>
-      <!-- /ko -->
-      <!-- /ko -->
+<canvas id="canvas1" style="position: absolute; top: 0; left: 0; z-index: -1">
+</canvas>
+<div id="toolbar" style="background-color: white"
+     data-bind="foreach: toolbarGroups">
+  <label class="btn-group">
+    <div class="input-group-text" style="border-top-right-radius: 0; border-bottom-right-radius: 0;"
+         data-bind="text: getLocaleName()"></div>
+    <!-- ko foreach: tools -->
+    <!-- ko if: type == 1/*ToolTypeEnum.RADIO*/ -->
+    <label class="btn btn-secondary"
+           data-toggle="popover" data-trigger="hover" data-html="true"
+           data-bind="css: {'active': $parent.selected() == name}, attr: {title: getTitle(), 'data-content': getContent()}">
+      <span data-bind="text: getLocaleName()"></span>
+      <input type="radio" autocomplete="off"
+             data-bind="attr: {name: $parent.title, id: id}, value: name, checked: $parent.selected">
     </label>
-  </div>
+    <!-- /ko -->
+    <!-- ko if: type == 2/*ToolTypeEnum.RADIOLIST*/ -->
+    <label class="btn btn-secondary dropdown-toggle"
+           data-bind="css: {'active': $parent.selected() == name}, attr: {style: 'z-index: ' + description + ' !important'}">
+      <!-- Show child text before current text. -->
+      <!--<span data-bind="text: selected"></span>-->
+      <span data-bind="text: getLocaleName()"></span>
+      <input type="radio" autocomplete="off"
+             data-bind="attr: {name: $parent.title, id: id}, value: name, checked: $parent.selected">
+      <div class="dropdown-menu" style="padding:0; margin:0; min-width:100%;">
+        <div class="btn-group-vertical" style="padding:0; margin:0; width:100%" data-toggle="buttons">
+          <!-- ko foreach: content -->
+          <label class="btn btn-secondary" style="margin:0"
+                 data-toggle="popover" data-trigger="hover" data-html="true"
+                 data-bind="css: {'active': $parent.selected() == name}, attr: {title: getTitle(), 'data-content': getContent()}">
+            <span data-bind="text: getLocaleName()"></span>
+            <input type="radio" autocomplete="off"
+                   data-bind="attr: {name: $parent.name, id: id}, value: name, checked: $parent.selected">
+          </label>
+          <!-- /ko -->
+        </div>
+      </div>
+    </label>
+    <!-- /ko -->
+    <!-- ko if: type == 3/*ToolTypeEnum.BUTTON*/ -->
+    <label class="btn btn-secondary"
+           data-toggle="popover" data-trigger="hover" data-html="true"
+           data-bind="attr: {title: getTitle(), 'data-content': getContent(), id: id}">
+      <span data-bind="text: getLocaleName()"></span>
+    </label>
+    <!-- /ko -->
+    <!-- ko if: type == 4/*ToolTypeEnum.CHECK*/ -->
+    <div class="btn-group">
+      <label class="btn btn-primary"
+             data-toggle="popover" data-trigger="hover" data-html="true"
+             data-bind="css: {'active': selected() == true}, attr: {title: getTitle(), 'data-content': getContent()}">
+        <input type="checkbox" autocomplete="off"
+               data-bind="checked: selected, attr: {id: id}">
+        <span data-bind="text: getLocaleName()"></span>
+      </label>
+    </div>
+    <!-- /ko -->
+    <!-- ko if: type == 5/*ToolTypeEnum.SLIDE*/ -->
+    <div class="btn btn-static"
+         data-toggle="popover" data-trigger="hover" data-html="true"
+         data-bind="attr: {title: getTitle(), 'data-content': getContent()}">
+      <span data-bind="text: getLocaleName() + ' :'"></span>
+      <!-- TODO: Add validation, http://knockoutjs.com/documentation/extenders.html -->
+      <input type="text" style="width: 80px"
+             data-bind="value: value, valueUpdate: 'input', attr: {id: id + '_txt'}">
+      <input type="range" style="vertical-align: middle"
+             data-bind="attr: {min: min, max: max, step: step, id: id}, value: value, valueUpdate: 'input'">
+    </div>
+    <!-- /ko -->
+    <!-- ko if: type == 6/*ToolTypeEnum.HELP*/ -->
+    <div class="btn-group">
+      <label class="btn btn-danger"
+             data-toggle="popover" data-trigger="hover" data-html="true"
+             data-bind="css: {'active': selected() == true}, attr: {title: getTitle(), 'data-content': getContent()}">
+        <input id="help" type="checkbox" autocomplete="off"
+               data-bind="checked: selected">
+        <span data-bind="text: getLocaleName()"></span>
+      </label>
+    </div>
+    <!-- /ko -->
+    <!-- /ko -->
+  </label>
+</div>
 
 <!--<canvas id="canvas1" style="position:absolute;top:0;left:0;"></canvas>-->
 <div style="width:100%;">
@@ -342,6 +342,7 @@ textarea {
 <!--Import scripts-->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
 
@@ -351,7 +352,6 @@ textarea {
 <script src="json-io.js"></script>
 <script src="graphs.js"></script>
 <script src="elements.js"></script>
-<script src="FileSaver.js"></script>
 <script src="locales/en.js"></script>
 <script src="locales/zh_CN.js"></script>
 <script src="locales/zh_TW.js"></script>
